--- a/index.html
+++ b/index.html
@@ -23,19 +23,26 @@
 
     <hr />
 
-    <h1>Top 5 most <small>watched</small> Indian Film <del>trailers</del> on Youtube🎥</h1>
+    <h1>
+      Top 5 most <small>watched</small> Indian Film <del>trailers</del> on
+      Youtube🎥
+    </h1>
     <h3 class="text">DARLING - <em>2010</em></h3>
-    <img class="img"
+    <img
+      class="img"
       src="https://i.pinimg.com/736x/eb/dc/ae/ebdcaee04fb1aa30f6a854419367d982.jpg"
       height="300"
       width="250"
     />
-    <video class="vid"
+    <video
+      class="vid"
       controls=""
       poster="https://i.ytimg.com/vi/rmGXIgeJZ1U/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLCYfNk_LoZg_ythxSXf7gH-PK8APQ"
       height="300"
       width="700"
-    ><source src="./Trailer/Darling.mp4"></video>
+    >
+      <source src="./Trailer/Darling.mp4" />
+    </video>
     <p>
       <mark><ins>Darling (2010)</ins></mark> is a Telugu romantic comedy film
       directed by <strong>A. Karunakaran</strong> and produced by B. V. S. N.
@@ -53,13 +60,15 @@
     </p>
 
     <h3 class="text">JALSA - <em>2008</em></h3>
-    <img class="img"
+    <img
+      class="img"
       src="https://media-cache.cinematerial.com/p/500x/wsd1erws/jalsa-indian-movie-poster.jpg?v=1456730349"
       height="300"
       width="250"
       alt="Image Not Found"
     />
-    <video class="vid"
+    <video
+      class="vid"
       src="./Trailer/jalsa.mp4"
       poster="./Trailer/download.jpg"
       height="300px"
@@ -83,14 +92,16 @@
     </p>
 
     <h3 class="text">KHALEJA - <em>2010</em></h3>
-    <img class="img"
+    <img
+      class="img"
       src="./Trailer/kp.jpg"
       alt="Image Not Found"
       height="300"
       width="250"
     />
 
-    <video class="vid"
+    <video
+      class="vid"
       src="./Trailer/khaleja.mp4"
       controls=""
       poster="./Trailer/KL.jpg"
